# sgfc-1.8

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README  all.h  execute.c  gameinfo.c  load.c  main.c  parse.c  parse2.c  properties.c  protos.h  save.c  strict.c  util.c
